tests/fixtures/LatestTests/VariableDeclarationTests/errors/reassignment_to_const_char.fg
/; EXPECT_ERROR: InvalidAssignmentToConstantVariable
const x:char = 'a'
x <- 'b'

